# husky_panda

./: .gitignore
SDF/: demo.py
SDF/data_generator/: env_collision_gen.py  self_collision_gen_ver1.py  self_collision_gen_ver2.py
SDF/neural_network/: env_collision_model_ver1.py  env_collision_model_ver2.py  env_collision_test.py  env_collision_train_ver1.py  env_collision_train_ver2.py  self_collision_model_ver1.py  self_collision_model_ver2.py  self_collision_train_ver1.py  self_collision_train_ver2.py
husky_panda_description/: CMakeLists.txt  package.xml
husky_panda_description/meshes/: Azure_Kinect_suppoter.stl
husky_panda_description/roslaunch/: description.launch
husky_panda_description/rviz/: rviz.rviz
husky_panda_description/urdf/: azure_kinect.urdf.xacro  husky_panda.urdf.xacro
husky_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_panda_moveit_config/config/: fake_controllers.yaml  gazebo_husky_panda.urdf  husky_panda.srdf  ompl_planning.yaml  panda.srdf  rviz.rviz  stomp_planning.yaml
husky_panda_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
